//
// Copyright 2020 DXOS.org
//

syntax = "proto3";

package dxos.echo;

import "google/protobuf/any.proto";

//
// Object mutation messages.
// https://developers.google.com/protocol-buffers/docs/proto#updating
// https://developers.google.com/protocol-buffers/docs/proto3#json
//

//
// Generic value.
//
message Value {
  oneof Type {
    bool      null                    = 1;    // TODO(burdon): Explicit null vs undefined (remove semantics?)

    bool      bool                    = 2;
    int32     int                     = 3;
    float     float                   = 4;
    string    string                  = 5;

    string    timestamp               = 10;   // https://en.wikipedia.org/wiki/Unix_time
    string    datetime                = 11;   // https://en.wikipedia.org/wiki/ISO_8601 (e.g., "2019-10-25T18:48:16Z")
    bytes     bytes                   = 12;

    Object    object                  = 20;
  }
}

message Object {
  repeated KeyValue properties        = 1;
}

message KeyValue {
  string key                          = 1;
  Value value                         = 2;
}

//
// Object mutation.
//
message ObjectMutation {
  enum Operation {
    SET                               = 0;    // Default.
    DELETE                            = 1;
    ARRAY_PUSH                        = 2;
    SET_ADD                           = 3;
    SET_DELETE                        = 4;
  }

  message Mutation {
    Operation operation               = 1;
    string key                        = 2;
    Value value                       = 3;
  }

  // Meta.
  // TODO(burdon): Any other meta (e.g., creation time?)
  string objectId                     = 1;

  // TODO(burdon): Replace with consistency mechanism.
  string id                           = 2;
  string dependency                   = 3;

  bool deleted                        = 10;   // System level flag.
  repeated Mutation mutations         = 11;   // Mutations to apply (if not deleted).
}

//
// Batch of ordered object mutations.
//
message ObjectMutationSet {
  repeated ObjectMutation mutations   = 1;
}

//
// Envelope (for testing).
// All top-level messages should be wrapped for protocol encoding/decoding.
//
message Envelope {
  google.protobuf.Any message         = 1;
}
